--- a/logo.html
+++ b/logo.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 
 <head>
@@ -114,101 +114,56 @@
         <section class="contenedor sobre-nosotros"></section>
         <h2 class="titulo">Laberinto Científico</h2>
         <div class="contenedor-sobre-nosotros">
-            <img src="imgrepre/Slide3.jpg" alt="" class="imagen-about-us">
+            <img src="imgrepre/logo2.0.png" alt="" class="imagen-about-us">
             <div class="contenido-textos">
-                <h3><span>1</span>Actividades para todos</h3>
-                <p>En esta seccion hemos seleccionado los mejores conocimientos para que tu aprendas de una forma más didáctica</p>
-                <h3><span>2</span>Guia</h3>
-                <p>Primero debes de ir al juego, iniciar y seguir todas las instrucciones para que empieces a tener nuevos conocimientos.<br> Con los comandos indicados te desplazarás por el mapa del juego. En ocaciones se utilizará el mauses y algunas letras
-                    del teclado.<br> NO ESPERES MÁS Y JUEGALO AHORA </p>
+                <h3><span>1</span>Nuestro logo</h3>
+                <p>Este es el logo que nos caracteriza, logo que nos distingue de los otros proyectos</p>
+                <h3><span>2</span>Más de el</h3>
+                <p>Este logo surgió de la creatividad de todos los que estamos a cargo de el proyecto, este es<br> un logo que encierra lo que es nuestro juego lo que nos caracteriza a todos nosotros. <br>
+                    <h3>Eslogan:</h3>Una manera diferente de aprender con nuestro laberinto científico. </p>
+            </div>
+
+        </div>
+        <h2 class="titulo">Quienes somos</h2>
+        <div class="contenido-textos">
+
+            <h3><span>1</span>Somos:</h3>
+            <p>
+                Somos una equipo de trabajo que nos centramos en resolver las problemáticas de nuestro entorno, en este caso nos centramos en<br> potenciar las capacidades y aprendizajes de los niños en el ámbito de las ciencias naturales, haciendo que
+                ellos se desempeñen de una<br> manera más acertada en el ámbito estudiantil.
+            </p>
+            <h3><span>2</span>Descripción del problema:</h3>
+            <p>En el ámbito Estudiantil, hemos observado que el nivel en las ciencias naturales es bajo, decidimos darle un cámbio a esto, decidimos crear<br> este juego, para que de manera interactiva los estudiantes aprendan más de este tema, y mejoren
+                su nivel atraves de nuestro juego.</p>
+
+        </div>
+
+        <h2 class="titulo">Objetivos</h2>
+        <div class="contenido-textos">
+
+            <h3><span>1</span>objetivo general:</h3>
+            <p>
+                Nuestro objetivo es que de manera interactiva, los niños o las personas parendan de una manera divertida, que se aprenda<br> de manera que se salga de lo cotiditiano.
+            </p>
+            <h3><span>2</span>Objetivo específico:</h3>
+            <p>Nuestro objetivo especifico, es que las personas incrementen su nivel atraves del aplicativo, que las personas se<br> llenen de conocimientos, y estos sean aplicados de manera que les ayude en su cotidianidad. </p>
+
+        </div>
+        <h2 class="titulo">Metodología</h2>
+        <div class="contenedor-sobre-nosotros">
+            <img src="imgrepre/frome.jpg" alt="" class="imagen-about-us">
+            <div class="contenido-textos">
+                <h3><span>1</span>Método:</h3>
+                <p>Nuestro método es sencillo pero altamente efectivo, como se ha dicho<br> anteriormente, esto se conseguirá atraves de un juego, los aprendizajes se conseguirán<br> gracias atraves que el usuario avance en el juego, este método es 100%
+                    garantizado, y se<br> asegura que se adquirirá un aprendizaje para aplicarlo en la vida diaria. </p>
+                <h2 class="titulo">Proyecto</h2>
+                <h3><span>1</span>Nuestro proyecto:</h3>
+                <p>Nuestro proyecto está en constante avance, siempre se trata de innovar, de destacar<br> ante los demás proyectos, somos ejemplares ante nuestros pares... Somos personas que se preocupan<br> por los demás, somos empáticos y por esta razon
+                    en nuestro proyecto se enfocó en las ciencias, para<br> que las personas que estén explorando este ámplio mundo no les sea tan complejo, sino que<br> al contrario, les sea sencillo y le cojan un gran amor a esta materia. </p>
             </div>
 
         </div>
 
-        <section class="portafolio">
-            <div class="contenedor">
-                <h2 class="titulo">Nuestra Galeria </h2>
-                <div class="galeria-portafolio">
-                    <div class="imagen-port">
-                        <img src="imgrepre/frasco de ensayo.png" alt="">
-                        <div class="hover-galeria">
-                            <a href="https://issuu.com/grupoanayas/docs/"><img src="imgrepre/Imagen1.png" alt=""></a>
-                            <p>Nuestros avances</p>
-
-                        </div>
-
-                    </div>
-                    <div class="imagen-port">
-                        <img src="imgrepre/boton de jugar2.0.png" alt="">
-                        <div class="hover-galeria">
-                            <a href="https://issuu.com/grupoanayas/docs/"><img src="imgrepre/Imagen1.png" alt=""></a>
-                            <p>Nuestros avances</p>
-
-                        </div>
-
-                    </div>
-                    <div class="imagen-port">
-                        <img src="imgrepre/fondo 3.JPG" alt="">
-                        <div class="hover-galeria">
-                            <a href="https://issuu.com/grupoanays/docs/"><img src="imgrepre/Imagen1.png" alt=""></a>
-                            <p>Nuestros avances</p>
-
-                        </div>
-
-                    </div>
-                    <div class="imagen-port">
-                        <img src="imgrepre/fondo 4.jpg" alt="">
-                        <div class="hover-galeria">
-                            <a href="https://issuu.com/grupoanayaa/docs/"><img src="imgrepre/Imagen1.png" alt=""></a>
-                            <p>Nuestros avances</p>
-
-                        </div>
-
-                    </div>
-                    <div class="imagen-port">
-                        <img src="imgrepre/logo2.0.png" alt="">
-                        <div class="hover-galeria">
-                            <a href="https://issuu.com/gruponayasa/docs/"><img src="imgrepre/Imagen1.png" alt=""></a>
-                            <p>Nuestros avances</p>
-
-                        </div>
-
-                    </div>
-                    <div class="imagen-port">
-                        <img src="imgrepre/numeros.jpg" alt="">
-                        <div class="hover-galeria">
-                            <a href="https://issuu.com/grupoanaysa/docs/"><img src="imgrepre/Imagen1.png" alt=""></a>
-                            <p>Nuestros avances</p>
-
-                        </div>
-
-                    </div>
-                    <div class="imagen-port">
-                        <img src="imgrepre/Imagen1 (1).png" alt="">
-                        <div class="hover-galeria">
-                            <a href="https://issuu.com/grupoanaysa/docs/"><img src="imgrepre/Imagen1.png" alt=""></a>
-                            <p>Nuestros avances</p>
-
-                        </div>
-
-                    </div>
-                    <div class="imagen-port">
-                        <img src="imgrepre/fondo.jpg" alt="">
-                        <div class="hover-galeria">
-                            <a href="https://issuu.com/grupoanaasa/docs/"><img src="imgrepre/Imagen1.png" alt=""></a>
-                            <p>Nuestros avances</p>
-
-                        </div>
-
-                    </div>
-
-
-
-
-
-                </div>
-            </div>
-            </div>
         </section>
 
 
