--- a/index.html
+++ b/index.html
@@ -6,34 +6,38 @@
     <title>LABERINTO CIENTÍFICO</title>
     <link rel="stylesheet" type="text/css" href="bibliotecavirtual.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="minibiblioteca/fontello.css">
+    <link rel="stylesheet" href="imgrepre/fontello.css">
 </head>
 
 <body>
     <header>
+
         <nav>
             <a href="https://web.facebook.com/?_rdc=1&_rdr"></a>
         </nav>
 
         <section class="textos-header">
+            <!--etiqueta 1 y 2 -->
+
             <h1>Una manera diferente de aprender en...</h1>
             <h2>Laberinto Científico</h2>
 
 
-        </section>
-        <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C189.90,152.45 287.52,-57.72 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div>
+
+            <div class="wave" style="height: 150px; overflow: hidden;"><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.98 C189.90,152.45 287.52,-57.72 500.00,49.98 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #fff;"></path></svg></div>
+
     </header>
     <div class="menu">
         <div class="navegacion">
             <nav>
                 <ul>
                     <li><a href="index.html">Inicio<span1 class="icon icon-up-dir"></span1></a></li>
-                    <li><a href="bibliotecas.html">Nuestro juego<span1 class="icon icon-up-dir"></span1></a></li>
+                    <li><a href="juego.html">Nuestro juego<span1 class="icon icon-up-dir"></span1></a></li>
                     <li>
                         <a href="">Actividades<span1 class="icon icon-up-dir"></span1></a>
-                        <div class="submenu">
+                        <!--  <div class="submenu">
                             <div class="submenu-items">
-                                <p>Actividades</p>
+                                 <p>Actividades</p>
                                 <ul>
                                     <li>
                                         <a href="actividades.html"></a>
@@ -62,38 +66,38 @@
                             </div>
 
                         </div>
-                    </li>
+                    </li>-->
 
-                    <li>
-                        <a href="#">Más de Nosotros<span1 class="icon icon-up-dir"></span1></a>
-                        <div class="submenu">
-                            <div class="submenu-items">
-                                <p>submenu1</p>
-                                <ul>
-                                    <li><a href="logo.html">Nosotros</a></li>
-                                    <li><a href="">Item 2</a></li>
-                                    <li><a href="">Item 3</a></li>
-                                </ul>
-                            </div>
-                            <div class="submenu-items">
-                                <p>submenu2 </p>
-                                <ul>
-                                    <li><a href="">Item 1</a></li>
-                                    <li><a href="">Item 2</a></li>
-                                    <li><a href="">Item 3</a></li>
-                                </ul>
-                            </div>
-                            <div class="submenu-items">
-                                <p>submenu3 </p>
-                                <ul>
-                                    <li><a href="">Item 1</a></li>
-                                    <li><a href="">Item 2</a></li>
-                                    <li><a href="">Item 3</a></li>
-                                </ul>
-                            </div>
+                        <li>
+                            <a href="logo.html">Más de Nosotros<span1 class="icon icon-up-dir"></span1></a>
+                            <!-- <div class="submenu">
+                                <div class="submenu-items">
+                                    <p>submenu1</p>
+                                    <ul>
+                                        <li><a href="logo.html">Nosotros</a></li>
+                                        <li><a href="">Item 2</a></li>
+                                        <li><a href="">Item 3</a></li>
+                                    </ul>
+                                </div>
+                                <div class="submenu-items">
+                                    <p>submenu2 </p>
+                                    <ul>
+                                        <li><a href="">Item 1</a></li>
+                                        <li><a href="">Item 2</a></li>
+                                        <li><a href="">Item 3</a></li>
+                                    </ul>
+                                </div>
+                                <div class="submenu-items">
+                                    <p>submenu3 </p>
+                                    <ul>
+                                        <li><a href="">Item 1</a></li>
+                                        <li><a href="">Item 2</a></li>
+                                        <li><a href="">Item 3</a></li>
+                                    </ul>
+                                </div>
 
-                        </div>
-                    </li>
+                            </div>-->
+                        </li>
                 </ul>
             </nav>
         </div>
@@ -114,25 +118,45 @@
         <section class="contenedor sobre-nosotros"></section>
         <h2 class="titulo">Laberinto Científico</h2>
         <div class="contenedor-sobre-nosotros">
-            <img src="imgrepre/Slide3.jpg" alt="" class="imagen-about-us">
+            <div class="video">
+                </a><video src="imgrepre/Azul Morado Blanco Escuelas_Aprendizaje a Distancia Vídeo 16_9 (3).mp4" autoplay alt="" class="imagen-about-u"></div>
             <div class="contenido-textos">
+                <!--etiqueta 3-->
+
                 <h3><span>1</span>Actividades para todos</h3>
-                <p>En esta seccion hemos seleccionado los mejores conocimientos para que tu aprendas de una forma más didáctica</p>
+                <!--lista-->
+                <p>En esta seccion hemos seleccionado los mejores conocimientos para que tú<br> aprendas de una forma más didáctica</p>
                 <h3><span>2</span>Guia</h3>
-                <p>Primero debes de ir al juego, iniciar y seguir todas las instrucciones para que empieces a tener nuevos conocimientos.<br> Con los comandos indicados te desplazarás por el mapa del juego. En ocaciones se utilizará el mauses y algunas letras
+                <p>Primero debes de ir al juego, iniciar y seguir todas las instrucciones<br> para que empieces a tener nuevos conocimientos.<br> Con los comandos indicados te desplazarás por el mapa del juego. En ocaciones<br> se utilizará el mauses y algunas letras
                     del teclado.<br> NO ESPERES MÁS Y JUEGALO AHORA </p>
             </div>
 
         </div>
+
+        <!-- slider galeria de imagenes móbiles -->
+        <br>
+        <section class="slider">
+            <ul>
+
+                <li><img src="imgrepre/Slide3.jpg" width="90%" height="300px"></li>
+                <li><img src="imgrepre/logo2.0.png" width="90%" height="300px"></li>
+                <li><img src="imgrepre/fondo.jpg" width="90%" height="300px"></li>
+
+
+            </ul>
+        </section>
+        <br>
+
+
 
         <section class="portafolio">
             <div class="contenedor">
                 <h2 class="titulo">Nuestra Galeria </h2>
                 <div class="galeria-portafolio">
                     <div class="imagen-port">
-                        <img src="imgrepre/frasco de ensayo.png" alt="">
+                        </a><img src="imgrepre/frasco de ensayo.png" alt="">
                         <div class="hover-galeria">
-                            <a href="https://issuu.com/grupoanayas/docs/"><img src="imgrepre/Imagen1.png" alt=""></a>
+                            <a href="https://youtu.be/p7QupwB1F6U"><img src="imgrepre/Imagen1.png" alt=""></a>
                             <p>Nuestros avances</p>
 
                         </div>
@@ -141,7 +165,7 @@
                     <div class="imagen-port">
                         <img src="imgrepre/boton de jugar2.0.png" alt="">
                         <div class="hover-galeria">
-                            <a href="https://issuu.com/grupoanayas/docs/"><img src="imgrepre/Imagen1.png" alt=""></a>
+                            <a href="https://youtu.be/XoyiwyyLJdw"><img src="imgrepre/Imagen1.png" alt=""></a>
                             <p>Nuestros avances</p>
 
                         </div>
@@ -150,7 +174,7 @@
                     <div class="imagen-port">
                         <img src="imgrepre/fondo 3.JPG" alt="">
                         <div class="hover-galeria">
-                            <a href="https://issuu.com/grupoanays/docs/"><img src="imgrepre/Imagen1.png" alt=""></a>
+                            <a href="https://youtu.be/XoyiwyyLJdw"><img src="imgrepre/Imagen1.png" alt=""></a>
                             <p>Nuestros avances</p>
 
                         </div>
@@ -159,7 +183,7 @@
                     <div class="imagen-port">
                         <img src="imgrepre/fondo 4.jpg" alt="">
                         <div class="hover-galeria">
-                            <a href="https://issuu.com/grupoanayaa/docs/"><img src="imgrepre/Imagen1.png" alt=""></a>
+                            <a href="https://youtu.be/XoyiwyyLJdw"><img src="imgrepre/Imagen1.png" alt=""></a>
                             <p>Nuestros avances</p>
 
                         </div>
@@ -168,7 +192,7 @@
                     <div class="imagen-port">
                         <img src="imgrepre/logo2.0.png" alt="">
                         <div class="hover-galeria">
-                            <a href="https://issuu.com/gruponayasa/docs/"><img src="imgrepre/Imagen1.png" alt=""></a>
+                            <a href="https://youtu.be/XoyiwyyLJdw"><img src="imgrepre/Imagen1.png" alt=""></a>
                             <p>Nuestros avances</p>
 
                         </div>
@@ -177,7 +201,7 @@
                     <div class="imagen-port">
                         <img src="imgrepre/numeros.jpg" alt="">
                         <div class="hover-galeria">
-                            <a href="https://issuu.com/grupoanaysa/docs/"><img src="imgrepre/Imagen1.png" alt=""></a>
+                            <a href="https://youtu.be/XoyiwyyLJdw"><img src="imgrepre/Imagen1.png" alt=""></a>
                             <p>Nuestros avances</p>
 
                         </div>
@@ -186,7 +210,7 @@
                     <div class="imagen-port">
                         <img src="imgrepre/Imagen1 (1).png" alt="">
                         <div class="hover-galeria">
-                            <a href="https://issuu.com/grupoanaysa/docs/"><img src="imgrepre/Imagen1.png" alt=""></a>
+                            <a href="https://youtu.be/XoyiwyyLJdw"><img src="imgrepre/Imagen1.png" alt=""></a>
                             <p>Nuestros avances</p>
 
                         </div>
@@ -195,7 +219,7 @@
                     <div class="imagen-port">
                         <img src="imgrepre/fondo.jpg" alt="">
                         <div class="hover-galeria">
-                            <a href="https://issuu.com/grupoanaasa/docs/"><img src="imgrepre/Imagen1.png" alt=""></a>
+                            <a href="https://youtu.be/XoyiwyyLJdw"><img src="imgrepre/Imagen1.png" alt=""></a>
                             <p>Nuestros avances</p>
 
                         </div>
@@ -222,6 +246,8 @@
         <footer>
             <div class="contenedor-footer">
                 <div class="content-foo">
+                    <!--etiqueta 4-->
+
                     <h4>Teléfono</h4>
                     <p>234 84 24</p>
                 </div>
@@ -230,6 +256,8 @@
                     <p>ie.villaflora@medellin.gov.co</p>
                 </div>
                 <div class="content-foo">
+                    <!--etiqueta 5 -->
+
                     <h4>Direccion</h4>
                     <p>Calle 76 AE No.83C-41<br>Barrio Robledo Villa Flora<br>Medellin-Antioquia-Colombia</p>
                 </div>
