--- a/logo.html
+++ b/logo.html
@@ -6,7 +6,7 @@
     <title>LABERINTO CIENTÍFICO</title>
     <link rel="stylesheet" type="text/css" href="bibliotecavirtual.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700;800&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="minibiblioteca/fontello.css">
+    <link rel="stylesheet" href="imgrepre/fontello.css">
 </head>
 
 <body>
@@ -28,10 +28,10 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Inicio<span1 class="icon icon-up-dir"></span1></a></li>
-                    <li><a href="bibliotecas.html">Nuestro juego<span1 class="icon icon-up-dir"></span1></a></li>
+                    <li><a href="juego.html">Nuestro juego<span1 class="icon icon-up-dir"></span1></a></li>
                     <li>
                         <a href="">Actividades<span1 class="icon icon-up-dir"></span1></a>
-                        <div class="submenu">
+                        <!--<div class="submenu">
                             <div class="submenu-items">
                                 <p>Actividades</p>
                                 <ul>
@@ -61,12 +61,12 @@
                                 </ul>
                             </div>
 
-                        </div>
+                        </div> -->
                     </li>
 
                     <li>
-                        <a href="#">Más de Nosotros<span1 class="icon icon-up-dir"></span1></a>
-                        <div class="submenu">
+                        <a href="logo.html">Más de Nosotros<span1 class="icon icon-up-dir"></span1></a>
+                        <!-- <div class="submenu">
                             <div class="submenu-items">
                                 <p>submenu1</p>
                                 <ul>
@@ -92,7 +92,7 @@
                                 </ul>
                             </div>
 
-                        </div>
+                        </div> -->
                     </li>
                 </ul>
             </nav>
@@ -127,50 +127,65 @@
         <h2 class="titulo">Quienes somos</h2>
         <div class="contenido-textos">
 
-            <h3><span>1</span>Somos:</h3>
-            <p>
-                Somos una equipo de trabajo que nos centramos en resolver las problemáticas de nuestro entorno, en este caso nos centramos en<br> potenciar las capacidades y aprendizajes de los niños en el ámbito de las ciencias naturales, haciendo que
-                ellos se desempeñen de una<br> manera más acertada en el ámbito estudiantil.
-            </p>
-            <h3><span>2</span>Descripción del problema:</h3>
-            <p>En el ámbito Estudiantil, hemos observado que el nivel en las ciencias naturales es bajo, decidimos darle un cámbio a esto, decidimos crear<br> este juego, para que de manera interactiva los estudiantes aprendan más de este tema, y mejoren
-                su nivel atraves de nuestro juego.</p>
-
+            <div class="textosp1">
+                <h3><span>1</span>Somos:</h3>
+                <p>
+                    Somos una equipo de trabajo que nos centramos en resolver las problemáticas de nuestro entorno, en este caso nos centramos en<br> potenciar las capacidades y aprendizajes de los niños en el ámbito de las ciencias naturales, haciendo
+                    que ellos se desempeñen de una<br> manera más acertada en el ámbito estudiantil.
+                </p>
+                <h3><span>2</span>Descripción del problema:</h3>
+                <p>En el ámbito Estudiantil, hemos observado que el nivel en las ciencias naturales es bajo, decidimos darle un cámbio a esto, decidimos crear<br> este juego, para que de manera interactiva los estudiantes aprendan más de este tema, y mejoren
+                    su nivel atraves de nuestro juego.</p>
+            </div>
+        </div>
         </div>
 
         <h2 class="titulo">Objetivos</h2>
         <div class="contenido-textos">
 
-            <h3><span>1</span>objetivo general:</h3>
-            <p>
-                Nuestro objetivo es que de manera interactiva, los niños o las personas parendan de una manera divertida, que se aprenda<br> de manera que se salga de lo cotiditiano.
-            </p>
-            <h3><span>2</span>Objetivo específico:</h3>
-            <p>Nuestro objetivo especifico, es que las personas incrementen su nivel atraves del aplicativo, que las personas se<br> llenen de conocimientos, y estos sean aplicados de manera que les ayude en su cotidianidad. </p>
+            <div class="textosp">
+
+                <h3><span>1</span>objetivo general:</h3>
+                <p>
+                    Brindar a nuestros estudiantes de grados inferiores que presente dificultad en los procesos del área de ciencias<br> naturales, un aprendizaje significativo, interactivo y divertido a través del juego.
+                </p>
+                <h3><span>2</span>Objetivos específicos:</h3>
+
+                <p> -Identificar las falencias que presentan los estudiantes de primaria, institución educativa IE VIllaflor en el aprendizaje de las ciencias naturales. </p>
+
+
+                <p>-Buscar diferentes formas de enseñanza en cuanto a lo teórico, facilitando en los estudiantes el parendizaje en cuanto a las ciencias naturales. </p>
+
+                <p>-Nuestro objetivo especifico, es que las personas incrementen su nivel atraves del aplicativo, que las personas se<br> llenen de conocimientos, y estos sean aplicados de manera que les ayude en su cotidianidad. </p>
+
+                <p>-Nuestro objetivo especifico, es que las personas incrementen su nivel atraves del aplicativo, que las personas se<br> llenen de conocimientos, y estos sean aplicados de manera que les ayude en su cotidianidad. </p>
+            </div>
 
         </div>
         <h2 class="titulo">Metodología</h2>
         <div class="contenedor-sobre-nosotros">
-            <img src="imgrepre/frome.jpg" alt="" class="imagen-about-us">
+            <img src="imgrepre/scrum_graphic.webp" alt="" class="imagen-about-us">
+
             <div class="contenido-textos">
-                <h3><span>1</span>Método:</h3>
-                <p>Nuestro método es sencillo pero altamente efectivo, como se ha dicho<br> anteriormente, esto se conseguirá atraves de un juego, los aprendizajes se conseguirán<br> gracias atraves que el usuario avance en el juego, este método es 100%
-                    garantizado, y se<br> asegura que se adquirirá un aprendizaje para aplicarlo en la vida diaria. </p>
+                <h3><span>1</span>Metodología:</h3>
+                <p>Siempre enfocados a la metodología SCRUM, una metodologia agil, ya que se trabaja <br>en equipo a partir de iteraciones o Sprints, haciendo que todo el proyecto sea mucho mejor.</p>
                 <h2 class="titulo">Proyecto</h2>
                 <h3><span>1</span>Nuestro proyecto:</h3>
                 <p>Nuestro proyecto está en constante avance, siempre se trata de innovar, de destacar<br> ante los demás proyectos, somos ejemplares ante nuestros pares... Somos personas que se preocupan<br> por los demás, somos empáticos y por esta razon
                     en nuestro proyecto se enfocó en las ciencias, para<br> que las personas que estén explorando este ámplio mundo no les sea tan complejo, sino que<br> al contrario, les sea sencillo y le cojan un gran amor a esta materia. </p>
             </div>
-
+            <br>
         </div>
 
         </section>
+        <section class="portafolio">
+            <div class="contenedor">
 
 
 
-        </div>
-        </div>
-        </div>
+            </div>
+            </div>
+            </div>
         </section>
 
 
