--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <h2 class="titulo">Laberinto Científico</h2>
         <div class="contenedor-sobre-nosotros">
             <div class="video">
-                </a><video src="imgrepre/Azul Morado Blanco Escuelas_Aprendizaje a Distancia Vídeo 16_9 (3).mp4" autoplay alt="" class="imagen-about-u"></div>
+                </a><video src="video/Azul Morado Blanco Escuelas_Aprendizaje a Distancia Vídeo 16_9 (3).mp4" autoplay alt="" class="imagen-about-u"></div>
             <div class="contenido-textos">
                 <!--etiqueta 3-->
 
