--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <h2 class="titulo">Laberinto Científico</h2>
         <div class="contenedor-sobre-nosotros">
             <div class="video">
-                </a><video src="video/Azul Morado Blanco Escuelas_Aprendizaje a Distancia Vídeo 16_9 (3).mp4" autoplay alt="" class="imagen-about-u"></div>
+                </a><iframe width="560" height="315" src="https://www.youtube.com/embed/XoyiwyyLJdw" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
             <div class="contenido-textos">
                 <!--etiqueta 3-->
 
@@ -127,8 +127,8 @@
                 <!--lista-->
                 <p>En esta seccion hemos seleccionado los mejores conocimientos para que tú<br> aprendas de una forma más didáctica</p>
                 <h3><span>2</span>Guia</h3>
-                <p>Primero debes de ir al juego, iniciar y seguir todas las instrucciones<br> para que empieces a tener nuevos conocimientos.<br> Con los comandos indicados te desplazarás por el mapa del juego. En ocaciones<br> se utilizará el mauses y algunas letras
-                    del teclado.<br> NO ESPERES MÁS Y JUEGALO AHORA </p>
+                <p>Primero debes de ir al juego, iniciar y seguir todas las instrucciones<br> para que empieces a tener nuevos conocimientos.<br> Con los comandos indicados te desplazarás por el mapa del juego. En ocaciones<br> se utilizará el mauses y algunas
+                    letras del teclado.<br> NO ESPERES MÁS Y JUEGALO AHORA </p>
             </div>
 
         </div>
