--- a/index.html
+++ b/index.html
@@ -135,16 +135,18 @@
 
         <!-- slider galeria de imagenes móbiles -->
         <br>
-        <section class="slider">
-            <ul>
+        <center>
+            <section class="slider">
+                <ul>
 
-                <li><img src="imgrepre/Slide3.jpg" width="90%" height="300px"></li>
-                <li><img src="imgrepre/logo2.0.png" width="90%" height="300px"></li>
-                <li><img src="imgrepre/fondo.jpg" width="90%" height="300px"></li>
+                    <li><img src="imgrepre/Slide3.jpg" width="90%" height="300px"></li>
+                    <li><img src="imgrepre/logo2.0.png" width="90%" height="300px"></li>
+                    <li><img src="imgrepre/fondo.jpg" width="90%" height="300px"></li>
 
 
-            </ul>
-        </section>
+                </ul>
+            </section>
+        </center>
         <br>
 
 
